tests/algorithms/x/PHP/hashes/chaos_machine.out
Fatal error: Cannot redeclare function reset() in /workspace/mochi/tests/algorithms/x/PHP/hashes/chaos_machine.php on line 25